# envtamer-workshop

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
dotnet/: .gitignore  Directory.Packages.props  envtamer.sln
dotnet/src/envtamer/: Program.cs  envtamer.csproj
dotnet/src/envtamer/Data/: EnvtamerDbContext.cs
dotnet/src/envtamer/Init/: InitCommand.cs
dotnet/src/envtamer/List/: ListCommand.cs
dotnet/src/envtamer/Migrations/: 20250125152935_InitialMigration.Designer.cs  20250125152935_InitialMigration.cs  EnvTamerContextModelSnapshot.cs
dotnet/src/envtamer/Pull/: PullCommand.cs
dotnet/src/envtamer/Push/: PushCommand.cs
dotnet/src/envtamer/Utils/: DirectorySanitizer.cs
go/: go.mod
go/cmd/envtamer/: main.go
go/internal/command/: root.go
python/envtamer/: pyproject.toml
python/envtamer/envtamer/: cli.py
