[project]
name = "envtamer"
version = "0.1.0"
description = ""
authors = [
    {name = "Sybren Roede",email = "sybren@xprtz.net"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]

packages = [
    { include = "*.py" },
    { include = "envtamer" },
    { include = "envtamer/*.py" }
]

[tool.poetry.scripts]
envtamer = "envtamer.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
